unpackaged/main/default/objects/P_S_Survey_Recipient__c/P_S_Survey_Recipient__c.object-meta.xml
<CustomObject>
    <description>Products &amp; Services Survey Recipients</description>
    <label>P&amp;S Survey Recipient</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>P&amp;S Survey Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;S Survey Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>