unpackaged/main/default/objects/P_S_Survey_Recipient__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>P&amp;S Survey Recipients</relationshipLabel>
    <relationshipName>P_S_Survey_Recipients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>