unpackaged/main/default/objects/P_S_Survey_Recipient__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>P&amp;S Survey Recipients</relationshipLabel>
    <relationshipName>P_S_Survey_Recipients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>