unpackaged/main/default/objects/P_S_Survey_Recipient__c/fields/Products_Services_Id__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products &amp; Services</label>
    <referenceTo>PCSM_Visit_Cyc__c</referenceTo>
    <relationshipLabel>P&amp;S Survey Recipients</relationshipLabel>
    <relationshipName>P_S_Survey_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>