unpackaged/main/default/objects/P_S_Survey_Recipient__c/fields/Survey_3__c.field-meta.xml
<CustomField>
    <fullName>Survey_3__c</fullName>
    <label>Survey 3</label>
    <type>DateTime</type>
</CustomField>